Fixed main menu visibility

--- a/sass/_tangerine-settings.scss
+++ b/sass/_tangerine-settings.scss
@@ -22,6 +22,7 @@ $topbar-bg: #f57900;
 $top-menu-active-bg: #f57900;
 $topbar-height: 45px;
 $topbar-margin-bottom: 0;
+$topbar-breakpoint: emCalc(940px);
 
 // Main menu
 $main-menu-bg: #7f3f58;
